<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"><b>Upkeep</b></string>
    <string name="game_start">Life Tracker</string>
    <string name="name_life"><b>Life Tracker</b></string>
    <string name="start_life">Initial Life</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="more_features_coming_soon">More features coming soon!</string>
    <string name="textview">TextView</string>
    <string name="back">Back</string>
    <string name="number"></string>
    <string name="hp_num">30</string>
    <string name="player_top_num">1</string>
    <string name="player_left_num">1</string>
    <string name="player_right_num">1</string>
    <string name="player_bottom_num">1</string>
</resources>